--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   web_socket_client: ^0.1.5
   flutter_markdown: ^0.7.5
+  skeletonizer: ^1.4.3
 
 dev_dependencies:
   flutter_test:
